# xuppl4_mindy

./: README.md  grab.sh  project.xpr  push
project.gen/sources_1/bd/mref/abm_manager_if/: component.xml
project.gen/sources_1/bd/mref/abm_notifier/: component.xml
project.gen/sources_1/bd/mref/axi_iic_fe/: component.xml
project.gen/sources_1/bd/mref/axi_revision/: component.xml
project.gen/sources_1/bd/mref/aximm_to_rdmx/: component.xml
project.gen/sources_1/bd/mref/cmac_cdc/: component.xml
project.gen/sources_1/bd/mref/cmac_control/: component.xml
project.gen/sources_1/bd/mref/cmac_reset_mgr/: component.xml
project.gen/sources_1/bd/mref/data_consumer/: component.xml
project.gen/sources_1/bd/mref/data_fetch/: component.xml
project.gen/sources_1/bd/mref/data_mover/: component.xml
project.gen/sources_1/bd/mref/fill_ram/: component.xml
project.gen/sources_1/bd/top_level/: top_level.bda  top_level.bxml
project.srcs/sources_1/bd/top_level/: top_level.bd  top_level.bda
runtime/: mindy_api.sh  test
software/: CMakeLists.txt  README.md
software/src/mindylib/: mindy.cpp  mindy.h
software/src/mindylib/old/: UioInterface.cpp  UioInterface.h  config_file.cpp  config_file.h  ecdproxy.cpp
software/src/mindytest/: main.cpp
src/common/: axi_revision.v  revision_history.vh
src/mindy/: data_fetch.v  data_mover.v  frame_counters.v  mindy_if.v  ping_ponger.v  rdmx_shim.v  rdmx_shim_ctl.v  status_mgr.v
src/qsfp/: cmac_cdc.v  cmac_reset_mgr.v
src/rdmx/: rdmx_xmit.v
src/temp/: fill_ram.v
xdc/: board.xdc
(+279 files in other folders)
